--- a/publishable/assets/mix-manifest.json
+++ b/publishable/assets/mix-manifest.json
@@ -1,10 +1,6 @@
 {
-    "/images/Icon-Sms77.svg": "/images/Icon-Sms77.svg?id=c49bcd564288243e3a8b",
     "/js/admin.js": "/js/admin.js?id=4563531c7a042459ce24",
-    "/css/admin.css": "/css/admin.css?id=3367f8239d5b891f7ed3",
-    "/images/sms77-24x24.png": "/images/sms77-24x24.png?id=5e948145956dbbd45dd6",
-    "/images/sms77-20x20.png": "/images/sms77-20x20.png?id=55f6a353d409ae643e72",
-    "/images/sms77-21x20.png": "/images/sms77-21x20.png?id=b3be79fe5cd9d9c92969",
-    "/images/sms77.svg": "/images/sms77.svg?id=b77f7f89ef7bc0fa7aad",
-    "/images/sms77.png": "/images/sms77.png?id=21a529501babaf661b1e"
+    "/css/admin.css": "/css/admin.css?id=5128ce6f8cfb4189dbde",
+    "/images/seven-20x20.png": "/images/seven-20x20.png?id=1e206d451866f13747ee",
+    "/images/seven.png": "/images/seven.png?id=993412bbe0be9acd1a09"
 }
